--- a/config-template.yml
+++ b/config-template.yml
@@ -2,15 +2,14 @@ server:
   host: "0.0.0.0"
   port: 9191
 redis:
-  session:
-    host: "127.0.0.1"
-    port: 6379
-    username: ""
-    password: ""
-    # 选择数据库
-    database: 7
-    # 连接时是否重置
-    reset: false
+  host: "127.0.0.1"
+  port: 6379
+  username: ""
+  password: ""
+  # 选择数据库
+  database: 7
+  # 连接时是否重置，只影响用户 session
+  reset: false
 postgres:
   host: "localhost"
   port: 5432
@@ -19,3 +18,10 @@ postgres:
   dbname: "cercis"
   sslmode: "disable"
   timezone: "Asia/Shanghai"
+# SMS 短信服务，目前使用阿里云
+sms:
+  region: "cn-beijing"
+  accesskey: "<aliyun-sms-accesskey>"
+  secret: "<aliyun-sms-secret>"
+  signname: "幻想乡"
+  templatecode: "<sms-template-code>"
