增加七牛云上传凭证获取的 api

--- a/config-template.yml
+++ b/config-template.yml
@@ -27,3 +27,7 @@ sms:
   secret: "<aliyun-sms-secret>"
   signname: "幻想乡"
   templatecode: "<sms-template-code>"
+qiniu:
+  accesskey: ""
+  secretkey: ""
+  bucket: "cercis"
